bytestash-1/ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bytestash-1
  namespace: bytestash-1
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`bytestash.pimonlab.xyz`)
      priority: 10
      services:
        - name: bytestash-1
          namespace: bytestash-1
          port: 5000
  tls:
    secretName: bytestash-1-ts-secret
